--- a/Project html/index.html
+++ b/Project html/index.html
@@ -14,6 +14,17 @@
 <body>
 <div class="header">
     <div class="header__wrap">
+        <p>Ваш город: <u>Москва</u></p>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Еще</a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Доставка</a></li>
+                <li><a class="dropdown-item" href="#">Оплата</a></li>
+                <li><a class="dropdown-item" href="#">Гарантия</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">О магазине</a></li>
+            </ul>
+        </li>
         <div class="header__nav__left">
             <div class="header__information__left">Ваш город: Москва</div>
             <div class="header__information__left">Информация</div>
@@ -42,7 +53,7 @@
         <img src="image/time.png" alt="time">
         <div class="header__top__text2">
             <p>Мы работаем: будни - 9:00-21:00</p>
-            <p class="xxx"> сб. - 10:00-15:00</p>
+            <p> сб. - 10:00-15:00</p>
         </div>
     </div>
           <div class="header__top3">
@@ -58,18 +69,23 @@
               </div>
           </div>
           <div class="header__top__text5">
-              <h1>+7 383 291 92 86</h1>
+              <p>+7 383 291 92 86</p>
               <p class="xxx">форма обратной связи</p>
           </div>
 </div>
     <div class="header__bottom">
         <div class="header__bottom__btn">
-            <button class="header__bottom">Каталог</button>
+            <button class="header__bottom">
+                <img class="btn_stick" src="image/Group%20138.png" alt="group">
+               <p>Каталог</p>
+            </button>
         </div>
         <div class="header__bottom__search">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Поиск по наименованию или артикулу" aria-label="Username" aria-describedby="input-group-button-right">
-                <button type="button" class="btn btn-outline-secondary" id="input-group-button-right">Найти</button>
+                <button type="button" class="btn btn-outline-secondary" id="input-group-button-right"><a>Найти</a>
+                <img src="image/search.png" alt="search">
+                </button>
             </div>
         </div>
         <div class="item">
@@ -218,6 +234,28 @@
         </div>
     </div>
 </div>
+<div class="image__media">
+    <img src="image/house.png" alt="house">
+    <img src="image/heart.png" alt="heart">
+    <img src="image/cart.png" alt="cart">
+    <img src="image/user.png" alt="user">
+</div>
+
+<div class="image__text">
+<div class="image__media__text">
+    <p>Главная</p>
+</div>
+<div class="image__media__text2">
+    <p>Избранное</p>
+</div>
+<div class="image__media__text3">
+    <p>Корзина</p>
+</div>
+<div class="image__media__text4">
+    <p>Профиль</p>
+</div>
+</div>
+
 
 <div class="menu__item">
     <div class="item__block">
@@ -486,6 +524,168 @@
     </div>
 </div>
 
+<div class="menu__katalog__media">
+    <div class="item__katalog">
+        <img class="image__katalog" src="image/spare.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Intermediate accumelator sleeve</p>
+        </div>
+        <div class="item__katalog__text3">
+            <p>ЦЕНА</p>
+            <p class="katalog__text2">по запросу</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+    <div class="item__katalog2">
+        <div class="discount">
+            <p>-40%</p>
+        </div>
+        <img class="image__katalog" src="image/spare2.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Комплект фрикционных дисков</p>
+        </div>
+        <div class="item__katalog__text3-part2">
+            <p>4 430₽</p>
+            <p class="katalog__text2-part2">5 430₽</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+</div>
+<div class="menu__border__media"></div>
+<div class="menu__katalog__media">
+    <div class="item__katalog">
+        <img class="image__katalog" src="image/spare.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Intermediate accumelator sleeve</p>
+        </div>
+        <div class="item__katalog__text3">
+            <p>ЦЕНА</p>
+            <p class="katalog__text2">по запросу</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+    <div class="item__katalog2">
+        <div class="discount">
+            <p>-40%</p>
+        </div>
+        <img class="image__katalog" src="image/spare2.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Комплект фрикционных дисков</p>
+        </div>
+        <div class="item__katalog__text3-part2">
+            <p>4 430₽</p>
+            <p class="katalog__text2-part2">5 430₽</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+</div>
+<div class="menu__border__media"></div>
+<div class="menu__katalog__media">
+    <div class="item__katalog">
+        <img class="image__katalog" src="image/spare.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Intermediate accumelator sleeve</p>
+        </div>
+        <div class="item__katalog__text3">
+            <p>ЦЕНА</p>
+            <p class="katalog__text2">по запросу</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+    <div class="item__katalog2">
+        <div class="discount">
+            <p>-40%</p>
+        </div>
+        <img class="image__katalog" src="image/spare2.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Комплект фрикционных дисков</p>
+        </div>
+        <div class="item__katalog__text3-part2">
+            <p>4 430₽</p>
+            <p class="katalog__text2-part2">5 430₽</p>
+        </div>
+        <div class="item__katalog__click">
+            <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+</div>
+
 <div class="button__bottom">
     <button>Показать еще</button>
 </div>
@@ -518,7 +718,7 @@
     <div class="circle">
         <div class="stick">
             <div class="date">
-                <p>3 ноября</p>
+                <p>2 ноября</p>
                 <div class="date__text2">
                     <p>Вышла новая версия для
                         мобильных приложений</p>
@@ -573,6 +773,68 @@
         </div>
     </div>
 </div>
+    <div class="last__border__media">
+                <div class="date">
+                    <p>3 ноября</p>
+                    <div class="date__text">
+                        <p>Изменения на сайте</p>
+                        <div class="text__bottom">
+                            Недавно на сайте мы ввели
+                            очередную порцию изменений,
+                            которые, как нам кажется, должны
+                            улучшить функциональность сайта
+                            и сделать его более удобным для
+                            пользователей. Реакция посетителей
+                            не заставила себя долго ждать...
+
+                </div>
+            </div>
+        </div>
+                <div class="date">
+                    <p>2 ноября</p>
+                    <div class="date__text2">
+                        <p>Вышла новая версия для
+                            мобильных приложений</p>
+                        <div class="text__bottom2">
+                            Что нового в 2.0:
+                            <br> — добавлена история поиска;<br>
+                            — добавлена синхронизация с сервером;
+                            — испрвление ошибок.
+                </div>
+            </div>
+        </div>
+                <div class="date">
+                    <p>1 ноября</p>
+                    <div class="date__text3">
+                        <p>Очередная порция обновлений для
+                            мобильных приложений</p>
+                        <div class="text__bottom3">
+                            Что нового добавлено:
+                            <br>— поддержка пуш-уведомлений;
+                            — разделы для покупателей;
+                            <br>— просмотр покупателя в заказах;
+                            — возможность поиска;
+                            <br> — исправление ошибок.
+
+
+                </div>
+            </div>
+        </div>
+                <div class="date">
+                    <p>31 октября</p>
+                    <div class="date__text4">
+                        <p>Интерфейс заказов для покупателей
+                            стал более функциональным</p>
+                        <div class="text__bottom4">
+                            Он позволяет выводить все
+                            формируемые системой
+                            уведомления(e-mail, смс, web) в
+                            едином окне с системой удобной
+                            фильтрации поиска.
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="footer">
     <div class="title__left">
@@ -604,7 +866,7 @@
         </div>
     </div>
     <div class="title__left">
-        <p>РУБРИКАТОР</p>
+        <p>ИНФОРМАЦИЯ</p>
         <div class="title__name3">
             <p>Пользовательское соглашение
                 об использовании персональных данных</p>
