--- a/Project html/index.html
+++ b/Project html/index.html
@@ -543,9 +543,9 @@
         <div class="item__katalog__click">
             <button>
                 <img src="image/cart2.png" alt="cart">
-                В корзину
+                <p>В корзину</p>
             </button>
-            <img src="image/heart2.png" alt="heart">
+            <img class="heart" src="image/heart2.png" alt="heart">
             <img class="image__click" src="image/group3.png" alt="group">
         </div>
     </div>
@@ -568,7 +568,61 @@
             <p class="katalog__text2-part2">5 430₽</p>
         </div>
         <div class="item__katalog__click">
+            <button class="btn__media">
+                <img src="image/cart2.png" alt="cart">
+                <p>В корзину</p>
+            </button>
+            <img  src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+</div>
+<div class="menu__border__media"></div>
+<div class="menu__katalog__media">
+    <div class="item__katalog">
+        <img class="image__katalog" src="image/spare.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Intermediate accumelator sleeve</p>
+        </div>
+        <div class="item__katalog__text3">
+            <p>ЦЕНА</p>
+            <p class="katalog__text2">по запросу</p>
+        </div>
+        <div class="item__katalog__click">
             <button>
+                <img src="image/cart2.png" alt="cart">
+                В корзину
+            </button>
+            <img class="heart" src="image/heart2.png" alt="heart">
+            <img class="image__click" src="image/group3.png" alt="group">
+        </div>
+    </div>
+    <div class="item__katalog2">
+        <div class="discount">
+            <p>-40%</p>
+        </div>
+        <img class="image__katalog" src="image/spare2.png" alt="spare">
+        <div class="item__katalog__text">
+            <img src="image/Star.png" alt="star">
+            <p>4.5</p>
+            <p class="katalog__text">10 отзывов</p>
+
+        </div>
+        <div class="item__katalog__text2">
+            <p>Комплект фрикционных дисков</p>
+        </div>
+        <div class="item__katalog__text3-part2">
+            <p>4 430₽</p>
+            <p class="katalog__text2-part2">5 430₽</p>
+        </div>
+        <div class="item__katalog__click">
+            <button class="btn__media">
                 <img src="image/cart2.png" alt="cart">
                 В корзину
             </button>
@@ -599,7 +653,7 @@
                 <img src="image/cart2.png" alt="cart">
                 В корзину
             </button>
-            <img src="image/heart2.png" alt="heart">
+            <img class="heart" src="image/heart2.png" alt="heart">
             <img class="image__click" src="image/group3.png" alt="group">
         </div>
     </div>
@@ -622,61 +676,7 @@
             <p class="katalog__text2-part2">5 430₽</p>
         </div>
         <div class="item__katalog__click">
-            <button>
-                <img src="image/cart2.png" alt="cart">
-                В корзину
-            </button>
-            <img src="image/heart2.png" alt="heart">
-            <img class="image__click" src="image/group3.png" alt="group">
-        </div>
-    </div>
-</div>
-<div class="menu__border__media"></div>
-<div class="menu__katalog__media">
-    <div class="item__katalog">
-        <img class="image__katalog" src="image/spare.png" alt="spare">
-        <div class="item__katalog__text">
-            <img src="image/Star.png" alt="star">
-            <p>4.5</p>
-            <p class="katalog__text">10 отзывов</p>
-
-        </div>
-        <div class="item__katalog__text2">
-            <p>Intermediate accumelator sleeve</p>
-        </div>
-        <div class="item__katalog__text3">
-            <p>ЦЕНА</p>
-            <p class="katalog__text2">по запросу</p>
-        </div>
-        <div class="item__katalog__click">
-            <button>
-                <img src="image/cart2.png" alt="cart">
-                В корзину
-            </button>
-            <img src="image/heart2.png" alt="heart">
-            <img class="image__click" src="image/group3.png" alt="group">
-        </div>
-    </div>
-    <div class="item__katalog2">
-        <div class="discount">
-            <p>-40%</p>
-        </div>
-        <img class="image__katalog" src="image/spare2.png" alt="spare">
-        <div class="item__katalog__text">
-            <img src="image/Star.png" alt="star">
-            <p>4.5</p>
-            <p class="katalog__text">10 отзывов</p>
-
-        </div>
-        <div class="item__katalog__text2">
-            <p>Комплект фрикционных дисков</p>
-        </div>
-        <div class="item__katalog__text3-part2">
-            <p>4 430₽</p>
-            <p class="katalog__text2-part2">5 430₽</p>
-        </div>
-        <div class="item__katalog__click">
-            <button>
+            <button class="btn__media">
                 <img src="image/cart2.png" alt="cart">
                 В корзину
             </button>
